@@ -6,7 +6,8 @@ VERSION 1.5.6
 	CHANGES:
 	
 	BUGFIXES:
-	
+		15007 - Category annotation tool in STB does not allow slashes in 
+				category names
 		14827 - clicking outside an error message does not always close the error
 		        message	
 		14493 - SMWhalo special properties Creator, Creation date, Last modified
